chore:  Refactoring of the event handling in the step-guard function (#3)
* chore(refactor): The logic for interpreting what kind of cloud formation event triggered the
function is now seperated in to its own class (CfnSnsEventTypeResolver). This is shared for both init deploy events and deploy cfn events.

* chore(test): removed redundant interface and added some unit tests