@@ -10,7 +10,6 @@ import static org.hamcrest.Matchers.containsString;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.verify;
 
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -19,18 +18,23 @@ import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.Test;
 import org.mockito.Mockito;
 
+import attini.step.guard.cloudformation.InitDeployEventHandler;
+import attini.step.guard.cloudformation.InitDeploySnsEvent;
 import io.quarkus.test.junit.QuarkusMock;
 import io.quarkus.test.junit.QuarkusTest;
 
 @QuarkusTest
 public class LambdaHandlerTest {
 
-    private static RespondToCfnEvent mock;
+
+    private static InitDeployEventHandler initDeployEventHandlerMock;
+
 
     @BeforeAll
     public static void setUp() {
-        mock = Mockito.mock(RespondToCfnEvent.class);
-        QuarkusMock.installMockForType(mock, RespondToCfnEvent.class);
+        initDeployEventHandlerMock = Mockito.mock(InitDeployEventHandler.class);
+
+        QuarkusMock.installMockForType(initDeployEventHandlerMock, InitDeployEventHandler.class);
     }
 
     @Test
@@ -44,7 +48,7 @@ public class LambdaHandlerTest {
                 .then()
                 .statusCode(200)
                 .body(containsString("Success"));
-        verify(mock).respondToInitDeployCfnEvent(any(InitDeploySnsEvent.class));
+        verify(initDeployEventHandlerMock).respondToInitDeployCfnEvent(any(InitDeploySnsEvent.class));
     }
 
     private Map<String, Object> input(){
@@ -54,7 +58,7 @@ public class LambdaHandlerTest {
         sns.put("TopicArn", "arn:aws:sns:eu-west-1:655047308345:attini-respond-to-init-deploy-cfn-event");
         sns.put("Message", "StackId='test'\nLogicalResourceId='MyFirstLambda'\nResourceType='AWS::CloudFormation::Stack'\nStackName='MyFirstLambda'\nResourceStatus='UPDATE_COMPLETE'\nClientRequestToken='test'");
         record.put("Sns", sns);
-        List<Map<String, Object>> records = Arrays.asList(record);
+        List<Map<String, Object>> records = List.of(record);
         input.put("Records", records);
         return input;
     }
